--- a/package.json
+++ b/package.json
@@ -9,19 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@hookform/resolvers": "^3.2.0",
+    "@react-native-async-storage/async-storage": "^1.19.2",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "axios": "^1.4.0",
     "expo": "~49.0.7",
+    "expo-dev-client": "~2.4.6",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-native": "0.72.3",
+    "react-native-date-picker": "^4.2.14",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-maps": "^1.7.1",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.10.1",
     "react-native-reanimated": "~3.3.0",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-star-rating": "^1.1.0",
+    "react-native-vector-icons": "^10.0.0",
+    "zod": "^3.22.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
